--- a/Anvil_Deploy.ipynb
+++ b/Anvil_Deploy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Anvil Deploy",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTKJXqfOIEhkvLfdLIYrYm",
+      "authorship_tag": "ABX9TyNbhewMBB6XQPNDBC175eG5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5ek2dcN7Krtq"
+        "id": "5ek2dcN7Krtq",
+        "outputId": "6468f443-3c40-4f9a-a5f7-99e0dc17c739",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "pip install anvil-uplink"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: anvil-uplink in /usr/local/lib/python3.6/dist-packages (0.3.34)\n",
+            "Requirement already satisfied: argparse in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (1.4.0)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (0.16.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (1.15.0)\n",
+            "Requirement already satisfied: ws4py in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (0.5.1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -52,11 +68,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hCtNPRVqKyBO",
-        "outputId": "c1ed57ff-1f1b-42e0-f4ad-734ab5d722d9",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4dc8177-e2a9-4d80-955a-7dc3b083d10c"
       },
       "source": [
         "import anvil.server\n",
@@ -80,16 +95,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "wpiMcKSAdeve",
-        "outputId": "7d448a92-b9e9-4729-d18c-28b10bfd332d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "919e6e58-1bc6-48dc-c6d5-2ed58f27f702"
       },
       "source": [
         "vivek_model_3.predict([[1.0,0.61,3,188,4,0,0,1,0,0,0,0,0,1,0,0,0]])"
       ],
-      "execution_count": 25,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +115,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 4
         }
       ]
     },
@@ -109,16 +123,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "fcOvXscdWNtV",
-        "outputId": "76b836c7-50c3-4c0c-9e21-075eef24d9dd",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "78643686-5a61-4d37-e3b6-c99eb8bc2847"
       },
       "source": [
         "vivek_model_3.predict([[0.10,0.60,6,288,2,0,0,1,0,0,1,0,0,0,0,0,0]])"
       ],
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +143,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 5
         }
       ]
     },
@@ -142,41 +155,45 @@
       "source": [
         "@anvil.server.callable\n",
         "def get_data(a,b,c,d,e,f,g,h,i):\n",
-        "  if h==\"technical\" :\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,1]])\n",
-        "  elif h==\"RandD\" :\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),1,0,0,0,0,0,0,0,0]])\n",
-        "  elif h==\"accounting\" :\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,1,0,0,0,0,0,0,0]])\n",
-        "  elif h==\"HR\" :\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,1,0,0,0,0,0,0]])\n",
-        "  elif h==\"management\" :\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,1,0,0,0,0,0]])\n",
-        "  elif h==\"marketing\":\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,1,0,0,0,0]])\n",
-        "  elif h==\"product_mng\":\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,1,0,0,0]])\n",
-        "  elif h==\"sales\" :\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,1,0,0]])\n",
-        "  elif h==\"support\":\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,1,0]])\n",
-        "  elif h==\"IT\":\n",
-        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,0]])\n",
+        "  if ( (int(a) <0.1 or int(a)>1.0) or (int(b)<0.1 or int(b)>1.0 ) or (int(d)<95 or int(d)>350)):\n",
+        "    return (\"make sure your input are in range\")\n",
         "  else:\n",
-        "    score=7\n",
-        "  result=score\n",
-        "  if result==1:\n",
-        "    return ('This employee will leave your Company [1]')\n",
-        "  elif result==0:\n",
-        "    return (\"This employee will not leave your Company [0]\")\n",
-        "  elif result==7:\n",
-        "    return (\"wrong input\")\n",
+        "    if h==\"technical\" : \n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,1]])\n",
+        "    elif h==\"RandD\" :\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),1,0,0,0,0,0,0,0,0]])\n",
+        "    elif h==\"accounting\" :\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,1,0,0,0,0,0,0,0]])\n",
+        "    elif h==\"HR\" :\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,1,0,0,0,0,0,0]])\n",
+        "    elif h==\"management\" :\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,1,0,0,0,0,0]])\n",
+        "    elif h==\"marketing\":\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,1,0,0,0,0]])\n",
+        "    elif h==\"product_mng\":\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,1,0,0,0]])\n",
+        "    elif h==\"sales\" :\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,1,0,0]])\n",
+        "    elif h==\"support\":\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,1,0]])\n",
+        "    elif h==\"IT\":\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,0]])\n",
+        "    else:\n",
+        "      score=7\n",
+        "\n",
+        "    result=score\n",
+        "    if result==1:\n",
+        "      return ('This employee will leave your Company [1]')\n",
+        "    elif result==0:\n",
+        "      return (\"This employee will not leave your Company [0]\")\n",
+        "    elif result==7:\n",
+        "      return (\"wrong input\")\n",
         "\n",
         "\n",
         " ## print(f\"Hello from your own machine, {name}!\")\n",
         " # return ('This employee will leave your Company' if score==1 else'This employee will not leave your Company ' )"
       ],
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": []
     }
   ]
