--- a/Anvil_Deploy.ipynb
+++ b/Anvil_Deploy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Anvil Deploy",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbhewMBB6XQPNDBC175eG5",
+      "authorship_tag": "ABX9TyMKBxFNLj9poP4PF1oIENiR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5ek2dcN7Krtq",
-        "outputId": "6468f443-3c40-4f9a-a5f7-99e0dc17c739",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1a0751e8-04b8-4818-fda6-a285eb400586"
       },
       "source": [
         "pip install anvil-uplink"
@@ -42,10 +42,10 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: anvil-uplink in /usr/local/lib/python3.6/dist-packages (0.3.34)\n",
-            "Requirement already satisfied: argparse in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (1.4.0)\n",
-            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (0.16.0)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (1.15.0)\n",
-            "Requirement already satisfied: ws4py in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (0.5.1)\n"
+            "Requirement already satisfied: ws4py in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (0.5.1)\n",
+            "Requirement already satisfied: argparse in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (1.4.0)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from anvil-uplink) (0.16.0)\n"
           ],
           "name": "stdout"
         }
@@ -71,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d4dc8177-e2a9-4d80-955a-7dc3b083d10c"
+        "outputId": "1871b46e-e438-469f-bb81-2767318a8abd"
       },
       "source": [
         "import anvil.server\n",
@@ -98,7 +98,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "919e6e58-1bc6-48dc-c6d5-2ed58f27f702"
+        "outputId": "86edf3ae-63a8-4901-83d4-b8b504ae22f7"
       },
       "source": [
         "vivek_model_3.predict([[1.0,0.61,3,188,4,0,0,1,0,0,0,0,0,1,0,0,0]])"
@@ -126,7 +126,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78643686-5a61-4d37-e3b6-c99eb8bc2847"
+        "outputId": "15795b1f-99aa-4443-80e2-3fd175b1b65f"
       },
       "source": [
         "vivek_model_3.predict([[0.10,0.60,6,288,2,0,0,1,0,0,1,0,0,0,0,0,0]])"
@@ -150,44 +150,90 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "PAw1BKeooD6x"
+      },
+      "source": [
+        "@anvil.server.callable\r\n",
+        "\r\n",
+        "def get_data(a,b,c,d,e,f,g,h,i):\r\n",
+        "  if ( (int(d)<95 or int(d)>400) or (float(b)<0.1 or float(b)>1)  or (float(a)<0.1 or float(a)>1 )):\r\n",
+        "    return (\"make sure your input are in range \\n Satisfaction_level = {0.1 - 1} \\n Last_evaluation = {0.1 - 1}\t\\n Average_montly_hours = {95 - 400}\")\r\n",
+        "  else:\r\n",
+        "    if h==\"technical\" : \r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,1]])\r\n",
+        "    elif h==\"RandD\" :\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),1,0,0,0,0,0,0,0,0]])\r\n",
+        "    elif h==\"accounting\" :\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,1,0,0,0,0,0,0,0]])\r\n",
+        "    elif h==\"HR\" :\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,1,0,0,0,0,0,0]])\r\n",
+        "    elif h==\"management\" :\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,1,0,0,0,0,0]])\r\n",
+        "    elif h==\"marketing\":\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,1,0,0,0,0]])\r\n",
+        "    elif h==\"product_mng\":\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,1,0,0,0]])\r\n",
+        "    elif h==\"sales\" :\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,1,0,0]])\r\n",
+        "    elif h==\"support\":\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,1,0]])\r\n",
+        "    elif h==\"IT\":\r\n",
+        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,0]])\r\n",
+        "    else:\r\n",
+        "      score=7\r\n",
+        "\r\n",
+        "    result=score\r\n",
+        "    if result==1:\r\n",
+        "      return ('This employee will leave your Company [1]')\r\n",
+        "    elif result==0:\r\n",
+        "      return (\"This employee will not leave your Company [0]\")\r\n",
+        "    elif result==7:\r\n",
+        "      return (\"wrong input\")\r\n",
+        "\r\n"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mFz9aeroHvj3"
       },
       "source": [
         "@anvil.server.callable\n",
         "def get_data(a,b,c,d,e,f,g,h,i):\n",
-        "  if ( (int(a) <0.1 or int(a)>1.0) or (int(b)<0.1 or int(b)>1.0 ) or (int(d)<95 or int(d)>350)):\n",
-        "    return (\"make sure your input are in range\")\n",
+        "  \n",
+        "  if h==\"technical\" : \n",
+        "    \n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,1]])\n",
+        "  elif h==\"RandD\" :\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),1,0,0,0,0,0,0,0,0]])\n",
+        "  elif h==\"accounting\" :\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,1,0,0,0,0,0,0,0]])\n",
+        "  elif h==\"HR\" :\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,1,0,0,0,0,0,0]])\n",
+        "  elif h==\"management\" :\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,1,0,0,0,0,0]])\n",
+        "  elif h==\"marketing\":\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,1,0,0,0,0]])\n",
+        "  elif h==\"product_mng\":\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,1,0,0,0]])\n",
+        "  elif h==\"sales\" :\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,1,0,0]])\n",
+        "  elif h==\"support\":\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,1,0]])\n",
+        "  elif h==\"IT\":\n",
+        "    score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,0]])\n",
         "  else:\n",
-        "    if h==\"technical\" : \n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,1]])\n",
-        "    elif h==\"RandD\" :\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),1,0,0,0,0,0,0,0,0]])\n",
-        "    elif h==\"accounting\" :\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,1,0,0,0,0,0,0,0]])\n",
-        "    elif h==\"HR\" :\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,1,0,0,0,0,0,0]])\n",
-        "    elif h==\"management\" :\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,1,0,0,0,0,0]])\n",
-        "    elif h==\"marketing\":\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,1,0,0,0,0]])\n",
-        "    elif h==\"product_mng\":\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,1,0,0,0]])\n",
-        "    elif h==\"sales\" :\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,1,0,0]])\n",
-        "    elif h==\"support\":\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,1,0]])\n",
-        "    elif h==\"IT\":\n",
-        "      score=vivek_model_3.predict([[a,b,int(c),d,int(e),int(f),int(g),int(i),0,0,0,0,0,0,0,0,0]])\n",
-        "    else:\n",
-        "      score=7\n",
+        "    score=7\n",
         "\n",
-        "    result=score\n",
-        "    if result==1:\n",
-        "      return ('This employee will leave your Company [1]')\n",
-        "    elif result==0:\n",
-        "      return (\"This employee will not leave your Company [0]\")\n",
-        "    elif result==7:\n",
-        "      return (\"wrong input\")\n",
+        "  result=score\n",
+        "  if result==1:\n",
+        "    return ('This employee will leave your Company [1]')\n",
+        "  elif result==0:\n",
+        "    return (\"This employee will not leave your Company [0]\")\n",
+        "  elif result==7:\n",
+        "    return (\"wrong input\")\n",
         "\n",
         "\n",
         " ## print(f\"Hello from your own machine, {name}!\")\n",
